--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,12 @@
   <body>
     <!-- Write your HTML code here, you can delete everything withing the body tags -->
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+      <!-- <p id="excuse">My dog ate my homework</p> -->
+      <p><b><span class="who"> My dog</span></b></p>
+      <p><b><span class="action"> ate </span></b></p>
+      <p><b><span class="what"> my homework</span></b></p>
+      <p><b><span class="when"> yesterday </span></b></p>
+
     </div>
 
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
